# app/main/controller/user_controller.py
@@ -7,14 +7,15 @@ from ..service.user_service import get_a_user
 api = UserDto.api
 _user = UserDto.user
 
-@api.route('/<public_id>')
-@api.param('public_id', 'The User identifier')
-@api.response(404, 'User not found.')
+@api.route('/')
+@api.response(200, 'Ok')
+@api.response(401, 'Forbidden')
+@api.response(403, 'Unauthorized')
+@api.response(500, 'Internal server error.')
 class User(Resource):
-    @api.doc('get a user')
-    @api.marshal_with(_user)
+    @api.doc('get logged in user info')
     def get(self, public_id):
-        """get a user given its identifier"""
+        """get the logged in user info"""
         user = get_a_user(public_id)
         if not user:
             api.abort(404)
